...
                    MathRun("f(2) =", size, color)
                    Fraction("2² − 4", "2 − 2", size, color)
                    MathRun("=", size, color)
                    Fraction("0", "0", size, color)
                    MathRun("[حالة عدم تعيين]", 8, color)
                }
                2 -> MathRun("x² − 4 = (x − 2)(x + 2)", size, color)
                3 -> {
                    LimitSymbol(size, color)
                    Fraction("(x − 2)(x + 2)", "x − 2", size, color)
                    MathRun("=", size, color)
                    LimitSymbol(size, color)
                    MathRun("(x + 2)", size, color)
...
